changed font size and trying to get this postion absolute to work

--- a/index.html
+++ b/index.html
@@ -76,27 +76,27 @@
                     <a href="" class="cta cta--secondary uppercase text-2xl duration-200 text-center hover:text-[#000000ae] w-[80%] md:w-[35%] xl:max-w-72 xl:-ml-24">La newsroom ></a>
                 </div>
                 <!-- news card  -->
-                <div class="xl:w-4/6 flex flex-col xl:flex-row items-center xl:items-start justify-center xl:ml-[15%] gap-16 xl:gap-44 pt-16 text-[1.25rem] xl:text-[1rem]">
+                <div class="xl:w-4/6 flex flex-col xl:flex-row items-center xl:items-start xl:ml-[15%] gap-16 xl:gap-44 pt-16 text-[1.25rem] xl:text-[1rem]">
                     <!-- card news 1  -->
-                    <div class="flex flex-col text-center w-[95%] md:w-3/5 xl:w-1/5 ">
+                    <div class="flex flex-col text-center w-[95%] md:w-3/5 xl:w-1/5 relative">
                         <img src="assets/img/pgw18home.jpg" alt="image de la paris games week" class="rounded-xl  shadow-2xl">
                         <h3 class="pb-4 pt-4 text-left">Réunion d'information 19 décembre</h3>
                         <p class="text-left">Venez à notre rencontre lors de cette réunion d'information. Témoignages des étudiants / Ateliers sur la pédagogie par projet par projet "Active learning by gaming campus" / Découverte des locaux/ Rencontre avec l'équipe pédagogique / Questions réponse.</p>
-                        <a href="" class="news-link uppercase pt-4 text-lg text-blue-300 duration-200 hover:text-[#5c9ee9] lg:pt-7 lg:pb-8">sur inscription ></a>
+                        <a href="" class="news-link uppercase text-lg text-blue-300 duration-200 hover:text-[#5c9ee9] lg:pt-7 lg:pb-8 absolute ">sur inscription ></a>
                     </div>
                     <!-- card news 2  -->
-                    <div class="flex flex-col text-center w-[95%] md:w-3/5 xl:w-1/5">
+                    <div class="flex flex-col text-center w-[95%] md:w-3/5 xl:w-1/5 xl:relative">
                         <img src="assets/img/pgw18home.jpg" alt="image de la paris games week" class="rounded-xl  shadow-2xl">
                         <h3 class="pb-4 pt-4 text-left">Paris Games week 2018 et réunions d'information</h3>
                         <p class=" text-left">Pendant tout le mois d'octobre venez rencotrer l'équipe pédagogique du Gaming Campus : 3 réunions d'information au Gaming Campus Lyon et stand Gaming Campus à la PGW17</p>
-                        <a href="" class="news-link uppercase pt-4 text-lg text-blue-300 lg:pt-28 lg:pb-8 duration-200 hover:text-[#5c9ee9]">lire la suite ></a>
+                        <a href="" class="news-link uppercase pt-4 text-lg text-blue-300 lg:pb-8 duration-200 hover:text-[#5c9ee9] xl:absolute xl:bottom-2/3 ">lire la suite ></a>
                     </div>
                     <!-- card news 3 -->
                     <div class="flex flex-col text-center w-[95%] md:w-3/5 xl:w-1/5">
                         <img src="assets/img/inauguration_gaming_campus_photo.jpg" alt="image de la paris games week" class="rounded-xl shadow-2xl">
                         <h3 class="pb-4 pt-4 text-left">Inauguration Gaming Campus Lyon</h3>
                         <p class=" text-left">Revivez l'inaugurations du Gaming Campus Lyon avec les 180 invités, les grandes annonces de la rentrée, les photos de la soirée et les premières dates de réunions d'information.</p>
-                        <a href="" class="news-link uppercase pt-4 text-lg text-blue-300 lg:pt-36 lg:pb-8 duration-200 hover:text-[#5c9ee9]">lire la suite ></a>
+                        <a href="" class="news-link uppercase pt-4 text-lg text-blue-300 lg:pb-8 duration-200 hover:text-[#5c9ee9]">lire la suite ></a>
                     </div>
                 </div>
             </div>
