--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
         </section>
         <!-- FOOTER  -->
          <footer class="pt-12 mx-auto max-w-[100%] ml-0">
-            <div id="footer-primary-content" class="flex flex-col xl:flex-row xl:m-0 justify-center gap-8  relative w-[100%] md:w-3/4  ml-0 md:ml-[10%] xl:ml-[10%]">
-                <a href="index.html">
-                    <img src="assets/img/logo-gc-footer.jpg" alt="Logo Gaming campus" class="duration-200 hover:opacity-75 ml-[35%] md:ml-[45%]">
+            <div id="footer-primary-content" class="flex flex-col xl:flex-row xl:m-0 items-center justify-center gap-8  relative w-[100%] md:w-3/4  ml-0 md:ml-[10%] xl:ml-[10%]">
+                <a href="index.html" class="w-36">
+                    <img src="assets/img/logo-gc-footer.jpg" alt="Logo Gaming campus" class="duration-200 hover:opacity-75 ">
                 </a>
-                <ul class="pl-0 md:pl-16 leading-[3.5rem] text-center xl:text-left">
+                <ul class="pl-0  leading-[3.5rem] text-center xl:text-left">
                     <li class="uppercase pb-8 -mt-3">infos pratique</li>
                     <li><a href="" class="duration-200 hover:text-[#00000088]">Gaming Business School</a></li>
                     <li><a href="" class="duration-200 hover:text-[#00000088]">Gaming Academy</a></li>
@@ -117,27 +117,27 @@
                     <li><a href="" class="duration-200 hover:text-[#00000088]">Mentions légales</a></li>
                     <li><a href="" class="duration-200 hover:text-[#00000088]">C.G.U</a></li>
                 </ul>
-                <ul class="xl:w-96 pl-0 md:pl-16 xl:pl-0 text-center xl:text-left">
+                <ul class="xl:w-96 pl-0  xl:pl-0 text-center xl:text-left">
                     <li class="uppercase pb-8"> Parents</li>
                     <li class="pb-8"><a href="" class="duration-200 hover:text-[#00000088]">Question / réponse pour vous accompagner dans votre réflexion sur l'orientation de votre enfant et le choix de Gaming Campus/</a></li>
                     <li><a href="" class="duration-200 hover:text-[#00000088]">En savoir plus</a></li>
                 </ul>
                 <div>
-                    <ul class="pb-12 pl-0 md:pl-16 xl:pl-0 text-center xl:text-left">
+                    <ul class="pb-12 pl-0 xl:pl-0 text-center xl:text-left">
                         <li class="uppercase"></li>
                         <li class="pb-8">Tél. 04 28 29 81 03</li>
                         <li class="pb-8"> <a href="" class="duration-200 hover:text-[#00000088]">contact@gamingcampus.fr</a></li>
                     </ul>
                     <div class="flex flex-col max-w-[100%]">
-                        <p class="uppercase pb-8 pl-0 md:pl-16 xl:pl-0 text-center xl:text-left">Nous suivre</p>
-                        <ul class="flex justify-center pl-0 md:pl-16 xl:pl-0">
+                        <p class="uppercase pb-8 pl-0 xl:pl-0 text-center xl:text-left">Nous suivre</p>
+                        <ul class="flex justify-center pl-0 xl:pl-0">
                             <li class="pb-8"><a href=""><img src="assets/svg/twitter-black.svg" alt="logo de twitter" class="w-16 h-12 duration-200 hover:opacity-65"></a></li>
                             <li class="pb-8"><a href=""><img src="assets/svg/facebook-black.svg" alt="logo de facekook" class="w-16 h-12 duration-200 hover:opacity-65"></a></li>
                             <li class="pb-8"><a href=""><img src="assets/svg/linkedin-black.svg" alt="logo de linkedin" class="w-16 h-12 duration-200 hover:opacity-65"></a></li>
                             <li class="pb-8"><a href=""><img src="assets/svg/instagram-black.svg" alt="logo d'instagram"  class="w-16 h-12 duration-200 hover:opacity-65"></a></li>
                             </li>
                         </ul>
-                        <ul class="pl-0 md:pl-16 xl:pl-0 text-center xl:text-left">
+                        <ul class="pl-0 xl:pl-0 text-center xl:text-left">
                             <li>&copy; 2018 Gaming Campus</li>
                             <li>Tous droits réservés.</li>
                         </ul>
