--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body class="font-roboto">
     <header>
+        <h1>mon nouveau super titre.</h1>
         <nav>
             <div class="xl:hidden">
                 <img src="assets/svg/bars-solid.svg" alt="logo menu navigation" class="w-[7.5%] ml-[47.5%] md:p-2">
